--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/administration.css" asp-append-version="true" />
+
+    @* NO BORRAR O NO APLICAN CIERTOS ESTILOS *@
+    <link rel="stylesheet" href="~/Vestigio.styles.css" asp-append-version="true" />
 </head>
 <style>
     :root {
