--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/wwwroot/css/showcase.css
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/wwwroot/css/showcase.css
@@ -983,6 +983,39 @@ body {
         cursor: not-allowed;
     }
 
+
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loader-spinner {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* Responsive Adjustments */
 @media (max-width: 991.98px) {
     .product-details {
